solution/k8s/Deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-test
  labels:
    app: go-app
spec:
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      annotations:
        prometheus.io/port: "9100"
        prometheus.io/scrape: "true"
      labels:
        app: go-app
    spec:
      containers:
      - image: ignatka89/docker-go-app:v1
        name: go-app
        imagePullPolicy: IfNotPresent 
        #StartupProbe:
         # httpGet:
         #   path: /
         #   port: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 5
        ports:
          - containerPort: 8080
          - containerPort: 9100
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:6.2-alpine
        name: redis
        command: ["/bin/sh"]
        args: ["-c", "redis-server --save 5 1 --loglevel warning"]
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - "/bin/sh"
            - -c
            - redis-cli KEYS '*'
          periodSeconds: 5
        readinessProbe:
          exec:
            command:
            - "/bin/sh"
            - -c
            - redis-cli KEYS '*'
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
          - containerPort: 6379
      - name: redis-exporter
        image: oliver006/redis_exporter
        imagePullPolicy: Always
        ports:
        - containerPort: 9121
