solution/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-svc
spec:
  selector:
      app: go-app
  type: NodePort
  ports:
    - name: go-app-http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: go-app-prom
      port: 9100
      targetPort: 9100
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-app-svc
spec:
  selector:
      app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
